# KokkosRemoteSpacesTests

./: apply-clang-format
Default/: .nfs801b48f300ed35630000000d  CMakeLists.txt  run.sh  test.cpp
